style fix: z-index

--- a/client/src/components/photoSearch/photoSearch.module.scss
+++ b/client/src/components/photoSearch/photoSearch.module.scss
@@ -62,6 +62,7 @@
   max-width: 17em;
   max-height: 21em;
   overflow-y: auto;
+  z-index: 1;
 }
 
 .dropdownHeading {
